-- update - 2024.06.15

- fix: Variable name miss-matches

-- update - 2024.06.14

- fix: Issues where you was unable to disable the scripts